--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,7 +1,7 @@
 hibernate.driver_class=org.postgresql.Driver
 hibernate.connection.url=jdbc:postgresql://localhost:5432/spring2t2
 hibernate.connection.username=postgres
-hibernate.connection.password=KooKo_099
+hibernate.connection.password=1
 hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 hibernate.show_sql=true
 
@@ -10,4 +10,4 @@ hbm2ddl.auto=create
 
 
 #надо чтобы все работало правильно
-#hibernate.current_session_context_class=thread
+hibernate.current_session_context_class=thread
