--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,25 @@
         <version>5.3.20.Final</version>
     </dependency>
 
+  <!--spring security-->
+
+<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-core</artifactId>
+    <version>5.8.12</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-web</artifactId>
+    <version>5.8.12</version>
+</dependency>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-config</artifactId>
+    <version>5.8.12</version>
+</dependency>
+
 
 
 
