--- a/pom.xml
+++ b/pom.xml
@@ -173,9 +173,39 @@
 </dependency>
 
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-expression</artifactId>
+      <version>5.3.28</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-tx</artifactId>
+      <version>5.3.28</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aop</artifactId>
+      <version>5.3.28</version>
+    </dependency>
+
+
 
 
   </dependencies>
+
+<dependencyManagement>
+	<dependencies>
+<dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-bom</artifactId>
+    <version>5.8.12</version>
+    <type>pom</type>
+    <scope>import</scope>
+</dependency>
+	</dependencies>
+</dependencyManagement>
+
   <build>
 
     <!--plugins>
