--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+    <spring-security.version>5.5.7</spring-security.version>
   </properties>
   <version>1.0-SNAPSHOT</version>
   <name>spring2t2 Maven Webapp</name>
@@ -159,17 +160,17 @@
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-core</artifactId>
-    <version>5.8.12</version>
+    <version>${spring-security.version}</version>
 </dependency>
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-web</artifactId>
-    <version>5.8.12</version>
+    <version>${spring-security.version}</version>
 </dependency>
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-config</artifactId>
-    <version>5.8.12</version>
+    <version>${spring-security.version}</version>
 </dependency>
 
 
@@ -199,7 +200,7 @@
 <dependency>
     <groupId>org.springframework.security</groupId>
     <artifactId>spring-security-bom</artifactId>
-    <version>5.8.12</version>
+    <version>${spring-security.version}</version>
     <type>pom</type>
     <scope>import</scope>
 </dependency>
