--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
-    <spring-security.version>5.5.7</spring-security.version>
+    <spring-security.version>5.3.13.RELEASE</spring-security.version>
   </properties>
   <version>1.0-SNAPSHOT</version>
   <name>spring2t2 Maven Webapp</name>
