--- a/pom.xml
+++ b/pom.xml
@@ -195,7 +195,7 @@
 
   </dependencies>
 
-<dependencyManagement>
+<!--dependencyManagement>
 	<dependencies>
 <dependency>
     <groupId>org.springframework.security</groupId>
@@ -205,7 +205,7 @@
     <scope>import</scope>
 </dependency>
 	</dependencies>
-</dependencyManagement>
+</dependencyManagement-->
 
   <build>
 
